[package]
name = "csvlens"
version = "0.15.0"
authors = ["Yung Siang Liau <liauys@gmail.com>"]
license = "MIT"
description = "Command line csv viewer"
readme = "README.md"
homepage = "https://github.com/YS-L/csvlens"
repository = "https://github.com/YS-L/csvlens"
exclude = [".github/*", "tests/*"]
keywords = ["cli", "csv", "viewer", "pager", "tui"]
edition = "2024"
rust-version = "1.88"
default-run = "csvlens"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"], optional = true }
tempfile = "3"
regex = "1"
qsv-sniffer = "0.12"
tui-input = { version = "0.13", features = ["crossterm"] }
arrow = {version = "56", default-features = false, features = ["csv"]}
sorted-vec = "0.8"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"], optional = true }
thiserror = "2"
terminal-colorsaurus = "1.0"
ansi-to-tui = "7.0.0"
clap-cargo = {version = "0.18.3", optional = true}
csv-core = "0.1.13"
rand = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
crossterm = "0.28"

[features]
default = ["clipboard", "cli"]
clipboard = ["dep:arboard"]
cli = ["dep:clap", "dep:clap-cargo"]
bench = ["dep:rand"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = "debuginfo"

[profile.bench]
debug = true

[dev-dependencies]
rstest = "0.26.1"
criterion = "0.5.1"
rand = "0.8"

[[bench]]
name = "record_iterator"
harness = false

[[example]]
name = "build_bench_data"
required-features = ["bench"]